--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: bionic
+
 # Enable C++ support
 language: cpp
 
@@ -18,4 +20,6 @@ install:
 script:
     - uname -a
     - $CXX --version
+    - mkdir build
+    - cd build
     - cmake -DCMAKE_CXX_FLAGS="${EXTRA_FLAGS}" .. && cmake --build .
